--- a/Vidracaria_Portal/Views/Shared/_LayoutCliente.cshtml
+++ b/Vidracaria_Portal/Views/Shared/_LayoutCliente.cshtml
@@ -20,8 +20,8 @@
     <link href="~/lib/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <link href="~/lib/lightgallery/lightbox.min.css" rel="stylesheet" />
     <!-- Estilos -->
-    <link href="~/css/styles.css" rel="stylesheet" asp-append-version="true" />
-    <link href="~/scss/style.scss" rel="stylesheet" asp-append-version="true" />
+    <link href="~/css/styles.css" rel="stylesheet"/>
+    <link href="~/scss/style.scss" rel="stylesheet"/>
 
     <style>
         .activeFooter {
@@ -37,7 +37,7 @@
             <div class="contact-info d-flex align-items-center">
                 <i style="margin-right: 5px; color: #cc1616;" class="fas fa-mail-bulk phone-icon"></i>vidracariaportalbb@hotmail.com
                 <i style="margin-right: 5px; color: #cc1616;" class="fas fa-phone-square-alt phone-icon"></i> +55 (14) 3641-1797
-                <i style="margin-right: 5px; color: #cc1616;" class="fas fa-mail-bulk phone-icon"></i> +55 (14) 99773-1577
+                <i style="margin-right: 5px; color: #cc1616;" class="fas fa-mobile phone-icon"></i> +55 (14) 99773-1577
             </div>
         </div>
     </section>
@@ -139,8 +139,8 @@
     <script src="~/lib/flickty/flickity.pkgd.min.js"></script>
     <script src="~/lib/lightgallery/lightbox.js"></script>
     <!-- Estilos -->
-    <script src="~/js/main.js" asp-append-version="true"></script>
-    <script src="~/js/scripts.js" asp-append-version="true"></script>
+    <script src="~/js/main.js"></script>
+    <script src="~/js/scripts.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
