--- a/Vidracaria_Portal/wwwroot/css/styles.css
+++ b/Vidracaria_Portal/wwwroot/css/styles.css
@@ -248,56 +248,56 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
-.navbar .dropdown ul {
-    display: block;
-    position: absolute;
-    left: 0;
-    top: calc(100% + 30px);
-    margin: 0;
-    padding: 10px 0;
-    z-index: 99;
-    opacity: 0;
-    visibility: hidden;
-    background: #fff;
-    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-    transition: 0.3s;
-}
-
-    .navbar .dropdown ul li {
-        min-width: 200px;
+    .navbar .dropdown ul {
+        display: block;
+        position: absolute;
+        left: 0;
+        top: calc(100% + 30px);
+        margin: 0;
+        padding: 10px 0;
+        z-index: 99;
+        opacity: 0;
+        visibility: hidden;
+        background: #fff;
+        box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+        transition: 0.3s;
     }
 
-    .navbar .dropdown ul a {
-        padding: 10px 20px;
-        color: #191919;
+        .navbar .dropdown ul li {
+            min-width: 200px;
+        }
+
+        .navbar .dropdown ul a {
+            padding: 10px 20px;
+            color: #191919;
+        }
+
+            .navbar .dropdown ul a i {
+                font-size: 12px;
+            }
+
+            .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
+                color: #fff;
+            }
+
+    .navbar .dropdown:hover > ul {
+        opacity: 1;
+        top: 100%;
+        visibility: visible;
     }
 
-        .navbar .dropdown ul a i {
-            font-size: 12px;
-        }
+    .navbar .dropdown .dropdown ul {
+        top: 0;
+        left: calc(100% - 30px);
+        visibility: hidden;
+    }
 
-        .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-            color: #fff;
-        }
-
-.navbar .dropdown:hover > ul {
-    opacity: 1;
-    top: 100%;
-    visibility: visible;
-}
-
-.navbar .dropdown .dropdown ul {
-    top: 0;
-    left: calc(100% - 30px);
-    visibility: hidden;
-}
-
-.navbar .dropdown .dropdown:hover > ul {
-    opacity: 1;
-    top: 0;
-    left: 100%;
-    visibility: visible;
-}
+    .navbar .dropdown .dropdown:hover > ul {
+        opacity: 1;
+        top: 0;
+        left: 100%;
+        visibility: visible;
+    }
 
 @media (max-width: 1366px) {
     .navbar .dropdown .dropdown ul {
@@ -1448,3 +1448,20 @@ section {
         margin: -20px 0 30px 0;
     }
 }
+
+#mobileNavigation {
+    background: #cc1616;
+}
+
+    #mobileNavigation ul li {
+        width: 100%;
+    }
+
+        #mobileNavigation ul li a {
+            color:white;
+            font-size: 18px;
+        }
+
+            #mobileNavigation ul li a:hover {
+                border-bottom: 2px solid white;
+            }
