--- a/Vidracaria_Portal/Views/Aluminios/Edit.cshtml
+++ b/Vidracaria_Portal/Views/Aluminios/Edit.cshtml
@@ -5,74 +5,72 @@
     Layout = "~/Views/Shared/_LayoutAdministrador.cshtml";
 }
 
-<h1>Edit</h1>
-
-<h4>AluminiosModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CodigoAluminio" />
-            <div class="form-group">
-                <label asp-for="NomeAluminio" class="control-label"></label>
-                <input asp-for="NomeAluminio" class="form-control" />
-                <span asp-validation-for="NomeAluminio" class="text-danger"></span>
+<div class="container">
+    <div class="content">
+        <div class="row">
+            <div class="col-md-12">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="CodigoAluminio" />
+                    <div style="display: flex;">
+                        <div class="form-group col-md-6">
+                            <label asp-for="NomeAluminio" class="control-label"></label>
+                            <input asp-for="NomeAluminio" class="form-control" />
+                            <span asp-validation-for="NomeAluminio" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label asp-for="Marca" class="control-label"></label>
+                            <input asp-for="Marca" class="form-control" />
+                            <span asp-validation-for="Marca" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="form-group col-md-6">
+                            <label asp-for="CorId" class="control-label"></label>
+                            <select asp-for="CorId" class="form-control" asp-items="ViewBag.CorId"></select>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label asp-for="ExpessuraId" class="control-label"></label>
+                            <select asp-for="ExpessuraId" class="form-control" asp-items="ViewBag.ExpessuraId"></select>
+                        </div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="form-group col-md-6">
+                            <label asp-for="EstoqueMinimo" class="control-label"></label>
+                            <input asp-for="EstoqueMinimo" class="form-control" />
+                            <span asp-validation-for="EstoqueMinimo" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label asp-for="EstoqueMaximo" class="control-label"></label>
+                            <input asp-for="EstoqueMaximo" class="form-control" />
+                            <span asp-validation-for="EstoqueMaximo" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="form-group col-md-6">
+                            <label asp-for="PrecoVenda" class="control-label"></label>
+                            <input asp-for="PrecoVenda" class="form-control" />
+                            <span asp-validation-for="PrecoVenda" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label asp-for="PrecoFabrica" class="control-label"></label>
+                            <input asp-for="PrecoFabrica" class="form-control" />
+                            <span asp-validation-for="PrecoFabrica" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label asp-for="Imagem" class="control-label"></label>
+                        <input asp-for="Imagem" class="form-control" />
+                        <span asp-validation-for="Imagem" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" value="Save" class="btn btn-dark">Salvar</button>
+                        <a asp-action="Index" class="btn btn-danger">Voltar</a>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="CorId" class="control-label"></label>
-                <input asp-for="CorId" class="form-control" />
-                <span asp-validation-for="CorId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ExpessuraId" class="control-label"></label>
-                <input asp-for="ExpessuraId" class="form-control" />
-                <span asp-validation-for="ExpessuraId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Marca" class="control-label"></label>
-                <input asp-for="Marca" class="form-control" />
-                <span asp-validation-for="Marca" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EstoqueMaximo" class="control-label"></label>
-                <input asp-for="EstoqueMaximo" class="form-control" />
-                <span asp-validation-for="EstoqueMaximo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EstoqueMinimo" class="control-label"></label>
-                <input asp-for="EstoqueMinimo" class="form-control" />
-                <span asp-validation-for="EstoqueMinimo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PrecoVenda" class="control-label"></label>
-                <input asp-for="PrecoVenda" class="form-control" />
-                <span asp-validation-for="PrecoVenda" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PrecoFabrica" class="control-label"></label>
-                <input asp-for="PrecoFabrica" class="form-control" />
-                <span asp-validation-for="PrecoFabrica" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Imagem" class="control-label"></label>
-                <input asp-for="Imagem" class="form-control" />
-                <span asp-validation-for="Imagem" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataCadastro" class="control-label"></label>
-                <input asp-for="DataCadastro" class="form-control" />
-                <span asp-validation-for="DataCadastro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
