--- a/Vidracaria_Portal/Views/Ferragens/Create.cshtml
+++ b/Vidracaria_Portal/Views/Ferragens/Create.cshtml
@@ -4,76 +4,83 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_LayoutAdministrador.cshtml";
 }
-
-<h1>Create</h1>
-
-<h4>FerragensModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CodigoFerragem" class="control-label"></label>
-                <input asp-for="CodigoFerragem" class="form-control" />
-                <span asp-validation-for="CodigoFerragem" class="text-danger"></span>
+<div class="container">
+    <div class="content">
+        <div class="row">
+            <div class="col-md-12">
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div style="display: flex;">
+                        <div class="form-group col-md-4">
+                            <label asp-for="NomeFerragem" class="control-label"></label>
+                            <input asp-for="NomeFerragem" class="form-control" />
+                            <span asp-validation-for="NomeFerragem" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label asp-for="Marca" class="control-label"></label>
+                            <input asp-for="Marca" class="form-control" />
+                            <span asp-validation-for="Marca" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label asp-for="CorId" class="control-label"></label>
+                            <input asp-for="CorId" class="form-control" />
+                            <span asp-validation-for="CorId" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="form-group col-md-6">
+                            <label asp-for="EstoqueMaximo" class="control-label"></label>
+                            <input asp-for="EstoqueMaximo" class="form-control" />
+                            <span asp-validation-for="EstoqueMaximo" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label asp-for="EstoqueMinimo" class="control-label"></label>
+                            <input asp-for="EstoqueMinimo" class="form-control" />
+                            <span asp-validation-for="EstoqueMinimo" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="form-group col-md-6">
+                            <label asp-for="PrecoVenda" class="control-label"></label>
+                            <input asp-for="PrecoVenda" class="form-control mask" />
+                            <span asp-validation-for="PrecoVenda" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label asp-for="PrecoFabrica" class="control-label"></label>
+                            <input asp-for="PrecoFabrica" class="form-control mask" />
+                            <span asp-validation-for="PrecoFabrica" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="form-group col-md-6">
+                            <label asp-for="Imagem" class="control-label"></label>
+                            <input asp-for="Imagem" class="form-control" />
+                            <span asp-validation-for="Imagem" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-6" style="margin-left: 16px; margin-right: 15px; width: 100%;">
+                            <label asp-for="DataCadastro" class="control-label"></label>
+                            <input asp-for="DataCadastro" class="form-control" />
+                            <span asp-validation-for="DataCadastro" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" value="Create" class="btn btn-dark">Salvar</button>
+                        <a asp-action="Index" class="btn btn-danger">Voltar</a>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="NomeFerragem" class="control-label"></label>
-                <input asp-for="NomeFerragem" class="form-control" />
-                <span asp-validation-for="NomeFerragem" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CorId" class="control-label"></label>
-                <input asp-for="CorId" class="form-control" />
-                <span asp-validation-for="CorId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Marca" class="control-label"></label>
-                <input asp-for="Marca" class="form-control" />
-                <span asp-validation-for="Marca" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EstoqueMaximo" class="control-label"></label>
-                <input asp-for="EstoqueMaximo" class="form-control" />
-                <span asp-validation-for="EstoqueMaximo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EstoqueMinimo" class="control-label"></label>
-                <input asp-for="EstoqueMinimo" class="form-control" />
-                <span asp-validation-for="EstoqueMinimo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PrecoVenda" class="control-label"></label>
-                <input asp-for="PrecoVenda" class="form-control" />
-                <span asp-validation-for="PrecoVenda" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PrecoFabrica" class="control-label"></label>
-                <input asp-for="PrecoFabrica" class="form-control" />
-                <span asp-validation-for="PrecoFabrica" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Imagem" class="control-label"></label>
-                <input asp-for="Imagem" class="form-control" />
-                <span asp-validation-for="Imagem" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataCadastro" class="control-label"></label>
-                <input asp-for="DataCadastro" class="form-control" />
-                <span asp-validation-for="DataCadastro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="~/lib/mask/mask.js"></script>
+
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $(".mask").mask('000.000.000.000.000,00', { reverse: true });
+    </script>
 }
