--- a/Vidracaria_Portal/Views/VidrosTemperados/Create.cshtml
+++ b/Vidracaria_Portal/Views/VidrosTemperados/Create.cshtml
@@ -26,34 +26,25 @@
                     <div style="display: flex;">
                         <div class="form-group col-md-6">
                             <label asp-for="AdesivoId" class="control-label"></label>
-                            <input asp-for="AdesivoId" class="form-control" />
-                            <span asp-validation-for="AdesivoId" class="text-danger"></span>
+                            <select asp-for="AdesivoId" class="form-control" asp-items="ViewBag.AdesivoId"></select>
                         </div>
                         <div class="form-group col-md-6">
                             <label asp-for="PeliculaId" class="control-label"></label>
-                            <input asp-for="PeliculaId" class="form-control" />
-                            <span asp-validation-for="PeliculaId" class="text-danger"></span>
+                            <select asp-for="PeliculaId" class="form-control" asp-items="ViewBag.PeliculaId"></select>
                         </div>
                     </div>
                     <div style="display: flex;">
-                        <div class="form-group col-md-6">
-                            <label asp-for="CorId" class="control-label"></label>
-                            <input asp-for="CorId" class="form-control" />
-                            <span asp-validation-for="CorId" class="text-danger"></span>
-                        </div>
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label asp-for="ExpessuraId" class="control-label"></label>
-                            <input asp-for="ExpessuraId" class="form-control" />
+                            <select asp-for="ExpessuraId" class="form-control" asp-items="ViewBag.ExpessuraId"></select>
                             <span asp-validation-for="ExpessuraId" class="text-danger"></span>
                         </div>
-                    </div>
-                    <div style="display: flex;">
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label asp-for="EstoqueMaximo" class="control-label"></label>
                             <input asp-for="EstoqueMaximo" class="form-control" />
                             <span asp-validation-for="EstoqueMaximo" class="text-danger"></span>
                         </div>
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label asp-for="EstoqueMinimo" class="control-label"></label>
                             <input asp-for="EstoqueMinimo" class="form-control" />
                             <span asp-validation-for="EstoqueMinimo" class="text-danger"></span>
