--- a/Vidracaria_Portal/Views/Aluminios/Delete.cshtml
+++ b/Vidracaria_Portal/Views/Aluminios/Delete.cshtml
@@ -5,66 +5,16 @@
     Layout = "~/Views/Shared/_LayoutAdministrador.cshtml";
 }
 
+@section Styles{
+
+}
+
 <div class="container">
     <div class="content">
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.NomeAluminio)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.NomeAluminio)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.CorId)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.CorId)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Marca)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Marca)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.EstoqueMaximo)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.EstoqueMaximo)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.EstoqueMinimo)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.EstoqueMinimo)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.PrecoVenda)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.PrecoVenda)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.PrecoFabrica)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.PrecoFabrica)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Imagem)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Imagem)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.DataCadastro)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.DataCadastro)
-            </dd>
-        </dl>
+       
+        <h1>Deseja deletar esse Alumínio ?</h1>
 
-        <form asp-action="Delete">
+        <form asp-action="Delete" style="padding-bottom: 50px;">
             <input type="hidden" asp-for="CodigoAluminio" />
             <button type="submit" value="Delete" class="btn btn-dark">Deletar</button>
             <button asp-action="Index" class="btn btn-danger">Voltar</button>
