--- a/Vidracaria_Portal/Views/Clientes/Create.cshtml
+++ b/Vidracaria_Portal/Views/Clientes/Create.cshtml
@@ -64,7 +64,7 @@
                         <input asp-for="DataCadastro" class="form-control" />
                         <span asp-validation-for="DataCadastro" class="text-danger"></span>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" style="margin-left: 16px;"> 
                         <button type="submit" value="Create" class="btn btn-dark">Salvar</button>
                         <a asp-action="Index" class="btn btn-danger">Voltar</a>
                     </div>
