--- a/Vidracaria_Portal/Views/Clientes/Edit.cshtml
+++ b/Vidracaria_Portal/Views/Clientes/Edit.cshtml
@@ -60,7 +60,7 @@
                             <span asp-validation-for="Documento" class="text-danger"></span>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" style="margin-left: 16px;">
                         <button type="submit" value="Save" class="btn btn-dark">Salvar</button>
                         <a asp-action="Index" class="btn btn-danger">Voltar</a>
                     </div>
