--- a/Vidracaria_Portal/Views/VidrosComuns/Index.cshtml
+++ b/Vidracaria_Portal/Views/VidrosComuns/Index.cshtml
@@ -9,89 +9,90 @@
     <p>
         <a asp-action="Create">Create New</a>
     </p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.NomeVidro)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.AdesivoId)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PeliculaId)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ExpessuraId)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Marca)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.EstoqueMaximo)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.EstoqueMinimo)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PrecoVenda)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PrecoFabrica)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Imagem)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DataCadastro)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
+    <div class="table-responsive" style="margin-left: 20px;">
+        <table class="table" style="width: 1500px;">
+            <thead class="table-dark">
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.NomeVidro)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.AdesivoId)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PeliculaId)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ExpessuraId)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Marca)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.EstoqueMaximo)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.EstoqueMinimo)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PrecoVenda)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PrecoFabrica)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Imagem)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DataCadastro)
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.CodigoVidro">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.CodigoVidro">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.CodigoVidro">Delete</a>
-                    </td>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NomeVidro)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.AdesivoId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.PeliculaId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ExpessuraId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Marca)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.EstoqueMaximo)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.EstoqueMinimo)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.PrecoVenda)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.PrecoFabrica)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Imagem)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DataCadastro)
+                    </th>
+                    <th></th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NomeVidro)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.AdesivoId)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.PeliculaId)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ExpessuraId)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Marca)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EstoqueMaximo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EstoqueMinimo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.PrecoVenda)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.PrecoFabrica)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Imagem)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.DataCadastro)
+                        </td>
+                        <td>
+                            <a style="margin-right: 10px;" asp-action="Edit" asp-route-id="@item.CodigoVidro"><i class="fas fa-edit"></i></a>
+                            <a asp-action="Delete" asp-route-id="@item.CodigoVidro"><i class="fas fa-trash-alt"></i></a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
