--- a/Vidracaria_Portal/Views/Administrador/Home.cshtml
+++ b/Vidracaria_Portal/Views/Administrador/Home.cshtml
@@ -38,7 +38,6 @@
     </style>
 }
 
-
 <div class="content" style="padding-left: 60px;">
     <div class="row">
         <div class="col-md-12 boxSejabemVindo">
@@ -48,6 +47,6 @@
     </div> 
 </div>
 
-<script src="C:\Users\usuario\Desktop\Vidracaria-Portal\Vidracaria_Portal\Views\Administrador\Home.js"></script>
-
-@section Scripts{ }
+@section Scripts{
+    <script src="Home.js"></script>
+ }
