--- a/Vidracaria_Portal/Views/Aluminios/Delete.cshtml
+++ b/Vidracaria_Portal/Views/Aluminios/Delete.cshtml
@@ -6,7 +6,13 @@
 }
 
 @section Styles{
-
+    <style>
+        h1 {
+            font-weight: bold;
+            font-size: 22px;
+            letter-spacing: 0.8px;
+        }
+    </style>
 }
 
 <div class="container">
