--- a/Vidracaria_Portal/Views/Shared/_LayoutAdministrador.cshtml
+++ b/Vidracaria_Portal/Views/Shared/_LayoutAdministrador.cshtml
@@ -25,8 +25,10 @@
         <div class="left_area">
             <h3>Vidraçaria<span>Portal</span></h3>
         </div>
+        <form id="logout" asp-controller="Account" asp-action="Logout" hidden>
+        </form>
         <div class="right_area">
-            <a href="#" class="logout_btn"><i class="fas fa-sign-out-alt" style="margin-right: 3px;"></i>Sair</a>
+            <a href="javascript:{}" onclick="document.getElementById('logout').submit(); return false;" class="logout_btn"><i class="fas fa-sign-out-alt" style="margin-right: 3px;"></i>Sair</a>
         </div>
     </header>
     <!--header area end-->
@@ -59,7 +61,7 @@
     </div>
     <!--mobile navigation bar end-->
     <!--sidebar start-->
-    <div class="sidebar">
+    <div class="sidebar" id="sidebar">
         <div class="profile_info">
             <img src="~/img/Logo/logo.png" style="object-fit: cover;" class="profile_image" alt="">
             <h4>Vidraçaria Portal</h4>
@@ -96,6 +98,7 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <!-- Font Awesome  -->
     <script src="~/js/all.js"></script>
+    <script src="~/lib/minibar/minibar.min.js"></script>
     <!-- Scripts -->
     <script src="~/Administrador/script.js"></script>
     @await RenderSectionAsync("Scripts", required: false);
