--- a/Vidracaria_Portal/Views/VidrosComuns/Delete.cshtml
+++ b/Vidracaria_Portal/Views/VidrosComuns/Delete.cshtml
@@ -5,6 +5,16 @@
     Layout = "~/Views/Shared/_LayoutAdministrador.cshtml";
 }
 
+@section Styles{
+    <style>
+        h1 {
+            font-weight: bold;
+            font-size: 22px;
+            letter-spacing: 0.8px;
+        }
+    </style>
+}
+
 <div class="container">
     <div class="content">
 
